# youtube-dl-wrapper

./: .gitignore  Cargo.toml  README.md  ffmpeg  music.py  music_pyperclip.py  research.py  rustfmt.toml
src/: aria2.rs  boneyard.txt  lib.rs  main.rs  ytdl.rs
